<resources>
    <string name="app_name">Zelinn</string>
    <string name="preference_current_user">com.example.zelinn.CURRENT_USER</string>
    <string name="preference_jwt">com.example.zelinn.JWT</string>
    <string name="preference_user_flag">com.example.zelinn.USER_FLAG</string>
    <string name="preference_boards_flag">com.example.zelinn.BOARDS_FLAG</string>
    <string name="preference_pepper_flag">com.example.zelinn.PEPPER_FLAG</string>
    <string name="preference_board_flag">com.example.zelinn.BOARD_FLAG</string>

    <!--  Common  -->
    <string name="common_continue">Tiếp tục</string>
    <string name="permission_public">Công khai</string>
    <string name="permission_private">Riêng tư</string>
    <string name="create_action">Tạo mới</string>
    <string name="members">Các thành viên</string>
    <string name="member">Thành viên</string>
    <string name="select">Chọn</string>
    <string name="close">Đóng</string>
    <string name="back">Trở lại</string>
    <string name="logout">Đăng xuất</string>
    <string name="common_save">Lưu</string>
    <string name="common_share">Chia sẻ</string>
    <string name="common_invite">Mời tham gia</string>
    <string name="common_config">Thiết lập</string>
    <string name="common_to_detail">Xem chi tiết</string>
    <string name="common_archive">Lưu trữ</string>
    <string name="common_search">Tìm kiếm</string>
    <string name="common_boards">Bảng</string>
    <string name="common_pepper">Trang chủ</string>
    <string name="common_profile">Hồ sơ</string>
    <string name="common_notification">Thông báo</string>
    <string name="common_confirm">Xác nhận</string>
    <string name="common_cancel">Từ chối</string>
    <string name="common_delete">Xóa</string>

    <!--  Splash  -->
    <string name="splash_title_1">Quản lý nhiều việc hơn với Zelinn</string>
    <string name="splash_subtitle_2">Lập kế hoạch và tổ chức gần như bất kì việc gì với bất cứ ai</string>

    <!--  Login  -->
    <string name="login">Đăng nhập bằng Email</string>
    <string name="login_term">Bằng việc đăng ký, bạn đồng ý với Điều khoản dịch vụ và Chính sách riêng tư của chúng tôi.</string>
    <string name="login_title">Hãy nhập email của bạn</string>
    <string name="login_field_placeholder">Địa chỉ email</string>
    <string name="login_subtitle">Chúng tôi sẽ gửi email chứa đường link có thể giúp bạn đăng nhập ngay lập tức</string>
    <string name="login_mail_fail_dialog_title">Đã xảy ra lỗi trong quá trình gửi mã xác thực</string>
    <string name="login_mail_fail_dialog_subtitle">Vui lòng thử đăng nhập lại sau</string>
    <string name="login_mail_success_dialog_title">Đã gửi mail chứa mã xác thực</string>
    <string name="login_mail_dialog_action">Điền mã xác thực</string>
    <string name="login_verification_title">Xác thực tài khoản</string>
    <string name="login_verification_subtitle">Nhập mã kích hoạt gồm 6 số được gửi trong mail của bạn</string>
    <string name="registration_title">Tạo tài khoản mới</string>
    <string name="registration_emaill">Email đăng nhập</string>
    <string name="registration_name">Tên hiển thị</string>
    <string name="registration_phone">Số điện thoại</string>
    <string name="registration_birth">Ngày sinh</string>
    <string name="registration_success">Đăng ký thành công</string>
    <string name="registration_failed">Đã xảy ra lỗi trong quá trình đăng ký</string>
    <string name="registration_existed">Số điện thoại này đã được đăng ký</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_failed">Đã xảy ra lỗi trong quá trình đăng nhập</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_boards">Boards</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="verification_expired">Mã xác thực đã hết hạn!</string>
    <string name="verification_incorrect">Mã xác thực không chính xác!</string>
    <string name="verification_failed">Đã xảy ra lỗi trong quá trình xác thực!</string>
    <string name="login_limited_title">Quá nhiều lần thử đăng nhập</string>
    <string name="login_limited_subtitle">Vui lòng thử lại sau 5 phút</string>

    <!--  Homepage  -->
    <string name="boards_title">Bảng làm việc</string>

    <!--  Card  -->
    <string name="card_description">Mô tả</string>
    <string name="card_delete_confirmation">Bạn có muốn xóa thẻ này?</string>

    <!--  Board  -->
    <string name="board_public_value">PUBLIC</string>
    <string name="board_private_value">PRIVATE</string>

    <!--  All Boards  -->
    <string name="all_boards_title">Tất cả bảng</string>
    <string name="all_boards_subtitle">Các bảng trong không gian làm việc của bạn</string>

    <!--  Create Board  -->
    <string name="create_board_title">Tạo bảng</string>
    <string name="create_board_image">Ảnh đại diện bảng</string>
    <string name="create_board_name">Tên bảng</string>
    <string name="create_board_role">Quyền xem</string>
    <string name="create_board_permission_public">Đây là trang công khai. Bất kì ai có liên kết tới bảng này đều có thể thấy được và bảng cũng sẽ hiển thị trên công cụ tìm kiếm như Google. Chỉ có người được mời vào trong bảng mới có thể chỉnh sửa bảng được</string>
    <string name="create_board_permission_private">Bảng này hiển thị với các thành viên của Không gian làm việc. Chỉ những người được thêm vào bảng mới có thể chỉnh sửa bảng được</string>
    <string name="create_board_success">Tạo bảng thành công</string>
    <string name="create_board_fail">Đã xảy ra lỗi trong quá trình tạo bảng</string>

    <!--  Board Activity  -->
    <string name="board_create_list">Tạo danh sách</string>

    <!--  Create List  -->
    <string name="create_list_title">Tạo danh sách</string>
    <string name="create_list_name">Tên danh sách</string>
    <string name="create_list_success">Tạo danh sách thành công</string>
    <string name="create_list_priority">Ưu tiên</string>
    <string name="create_list_failed">Đã xảy ra lỗi trong quá trình tạo danh sách</string>

    <!--  Create Card  -->
    <string name="create_card_title">Tạo thẻ</string>
    <string name="create_card_name">Tên thẻ</string>
    <string name="create_card_success">Tạo thẻ thành công</string>
    <string name="create_card_start_date">Ngày bắt đầu</string>
    <string name="create_card_due_date">Ngày kết thúc</string>
    <string name="create_card_start_time">Thời gian bắt đầu</string>
    <string name="create_card_due_time">Thời gian kết thúc</string>
    <string name="create_card_unselect_date">Chưa chọn</string>
    <string name="create_card_failed">Đã xảy ra lỗi trong quá trình tạo thẻ</string>
    <string name="create_card_thumbnail">Ảnh đại diện</string>

    <!--  Profile  -->
    <string name="profile_edit_action">Chỉnh sửa thông tin</string>
    <string name="profile_show_action">Hồ sơ và hiển thị</string>
    <string name="profile_help_action">Trợ giúp</string>
    <string name="profile_contact_action">Liên hệ hỗ trợ</string>
    <string name="profile_term_action">Chính sách và điều khoản</string>
    <string name="profile_edit_failed">Đã xảy ra lỗi trong quá trình cập nhật thông tin</string>
    <string name="profile_edit_success">Cập nhật thông tin thành công</string>

    <!--  Select Members  -->
    <string name="select_member_title">Thành viên</string>
    <string name="select_member_action">Thêm thành viên</string>

    <!--  Board Menu  -->
    <string name="board_menu_title">Menu Bảng</string>
    <string name="board_menu_star">Ưu tiên</string>
    <string name="board_menu_info">Thông tin về bảng</string>
    <string name="board_menu_config_title">Thiết lập bảng</string>
    <string name="board_menu_info_owner">Chủ sở hữu</string>
    <string name="board_menu_info_description">Mô tả</string>
    <string name="board_menu_invite_hint">Tên hoặc email</string>
    <string name="board_menu_update_success">Cập nhật bảng thành công</string>
    <string name="board_menu_update_failed">Đã xảy ra lỗi trong quá trình cập nhật bảng</string>
    <string name="board_menu_invite_success">Đã gửi lời mời tham gia thành công</string>
    <string name="board_menu_invite_failed">Gửi lời mời tham gia thất bại</string>
    <string name="board_menu_invite_pending">Đã gửi lời mời</string>
    <string name="board_menu_member_list_joined">Đã tham gia</string>
    <string name="board_menu_member_list_pending">Đang mời</string>
    <string name="board_menu_member_list_remove">Hủy thành viên</string>
    <string name="board_menu_member_list_remove_confirm">Bạn muốn hủy các thành viên này?</string>
    <string name="board_menu_owner_action">Chuyển đổi sở hữu</string>
    <string name="board_menu_leave">Rời khỏi</string>
    <string name="board_menu_leave_confirmation">Bạn có muốn rời khỏi bảng này?</string>
    <string name="board_menu_delete_confirmation">Bạn có muốn xóa bảng này?</string>

    <!--  Notification  -->
    <string name="notification_type_invite_board">BOARD_INVITATION</string>

    <!--  List  -->
    <string name="list_sort_due">Sắp xếp theo ngày hết hạn</string>
    <string name="list_sort_create">Sắp xếp theo ngày tạo</string>
    <string name="list_sort_name">Sắp xếp theo tên thẻ</string>
    <string name="list_delete_confirmation">Bạn có muốn xóa danh sách này?</string>
    <string name="list_delete_subtitle">Tất cả thẻ trong danh sách này cũng sẽ bị xóa!</string>

    <!-- Pepper -->
    <string name="pepper_today">Hôm nay</string>
    <string name="pepper_yesterday">Hôm qua</string>
    <string name="pepper_tomorrow">Ngày mai</string>
    <string name="pepper_greeting">Xin chào,</string>
</resources>