<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_pepper"
        android:actionLayout="@layout/fragment_pepper"
        android:checked="true"
        android:color="@color/primary"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/common_pepper" />
    <item
        android:id="@+id/menu_boards"
        android:actionLayout="@layout/fragment_boards"
        android:color="@color/primary"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/common_boards" />
    <item
        android:id="@+id/menu_notification"
        android:actionLayout="@layout/fragment_notification"
        android:color="@color/primary"
        android:icon="@drawable/ic_notification"
        android:title="@string/common_notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_profile"
        android:actionLayout="@layout/fragment_profile"
        android:color="@color/primary"
        android:icon="@drawable/ic_person"
        android:title="@string/common_profile" />
</menu>