<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/splash_image_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splash_title_1"
        android:src="@drawable/splash1" />

    <TextView
        android:id="@+id/splash_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_space"
        android:layout_marginEnd="@dimen/main_space"
        android:text="@string/splash_title_1"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/splash_subtitle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_space"
        android:layout_marginEnd="@dimen/main_space"
        android:text="@string/splash_subtitle_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/main_space"
        android:layout_marginEnd="@dimen/main_space">

        <Button
            android:id="@+id/splash_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_term"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="@dimen/main_space"
            android:layout_marginEnd="@dimen/main_space"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_mail_outline_24"
            app:iconGravity="textStart" />

        <TextView
            android:id="@+id/login_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/main_space"
            android:layout_marginTop="@dimen/main_space"
            android:layout_marginEnd="@dimen/main_space"
            android:layout_marginBottom="@dimen/main_space"
            android:text="@string/login_term"
            android:textAlignment="center"
            android:textColor="@color/gray2"
            android:textSize="13sp" />
    </RelativeLayout>

</LinearLayout>