<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/main_space">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/board_menu_config_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_menu_config_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/board_menu_config_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_surface"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="@dimen/half_space"
            app:icon="@drawable/ic_close"
            app:iconPadding="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/board_menu_config_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_space"
        android:layout_marginBottom="@dimen/half_space"
        android:text="@string/create_board_name"
        android:textColor="@color/gray3" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/board_menu_config_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_board_name"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/board_menu_config_thumbnail_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_space"
        android:layout_marginBottom="@dimen/half_space"
        android:text="@string/create_board_image"
        android:textColor="@color/gray3" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="25dp" >

        <ImageView
            android:id="@+id/board_menu_config_thumbnail_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_space"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/board_menu_config_permission_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_board_role"
            android:textColor="@color/background_light" />

        <Button
            android:id="@+id/board_menu_config_permission_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/background"
            android:text="@string/permission_public"
            android:textAlignment="textEnd"
            android:textColor="@color/gray3"
            android:textStyle="bold"
            app:icon="@drawable/ic_keyboard_arrow_right"
            app:iconGravity="end" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_space"
        android:layout_marginBottom="@dimen/half_space">

        <Button
            android:id="@+id/board_menu_config_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/common_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/board_menu_config_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/board_menu_config_save_btn"
            app:layout_constraintEnd_toEndOf="@+id/board_menu_config_save_btn"
            app:layout_constraintStart_toStartOf="@+id/board_menu_config_save_btn"
            app:layout_constraintTop_toTopOf="@+id/board_menu_config_save_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/board_menu_config_archive_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/danger"
        android:text="@string/common_archive" />

</LinearLayout>