<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_space"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_space"
        android:background="?attr/actionModeCloseDrawable"
        android:backgroundTint="@color/white"
        android:minWidth="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_space"
            android:text="@string/login_title"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title"
            app:boxBackgroundColor="@color/background_surface"
            app:boxCornerRadiusBottomEnd="@dimen/border_radius"
            app:boxCornerRadiusBottomStart="@dimen/border_radius"
            app:boxCornerRadiusTopEnd="@dimen/border_radius"
            app:boxCornerRadiusTopStart="@dimen/border_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_field_placeholder"
                android:textColor="@color/white"
                android:textColorHint="@color/gray1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_input"
            android:layout_marginTop="@dimen/main_space"
            android:text="@string/login_subtitle"
            android:textColor="@color/gray3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/main_space"
            android:layout_marginEnd="@dimen/main_space"
            android:backgroundTint="@color/background_light"
            android:clickable="false"
            android:text="@string/common_continue" />

    </RelativeLayout>

</LinearLayout>