<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/main_space">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/board_menu_member_list_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_surface"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="@dimen/half_space"
            app:icon="@drawable/ic_close"
            app:iconPadding="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_space"
        android:layout_marginBottom="@dimen/half_space">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/board_menu_member_list_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/common_search"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/board_menu_member_list_joined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_space"
            android:layout_weight="0"
            android:backgroundTint="@color/background_surface"
            android:paddingLeft="@dimen/main_space"
            android:paddingTop="@dimen/half_space"
            android:paddingRight="@dimen/main_space"
            android:paddingBottom="@dimen/half_space"
            android:text="@string/board_menu_member_list_joined" />

        <Button
            android:id="@+id/board_menu_member_list_pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/background_surface"
            android:paddingLeft="@dimen/main_space"
            android:paddingTop="@dimen/half_space"
            android:paddingRight="@dimen/main_space"
            android:paddingBottom="@dimen/half_space"
            android:text="@string/board_menu_member_list_pending" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/board_menu_member_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/half_space"
        android:layout_marginBottom="@dimen/half_space"
        android:layout_weight="1"
        tools:itemCount="4"
        tools:listitem="@layout/fragment_member_item_selectable" />

    <Button
        android:id="@+id/board_menu_member_list_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/board_menu_member_list_remove" />

</LinearLayout>